# redistributables

./: CHANGELOG.md  CURRENT_VERSIONS.txt  README-deploy.md  README.md
.github/: release-notes.template.md
.github/workflows/: build-fetch.yml  build-release.yml  check-versions.yml
LICENSES/: README.md
go/: go.mod  vendor.go
go/fetch/: README.md  go.mod  main.go
go/fetch/gpu/: vendor.go
go/lib/: vendor.go
mental-llvm/: CMakeLists.txt  mental_llvm.cpp  mental_llvm.h
mental-mlvm/: CMakeLists.txt  mental_mlvm.cpp  mental_mlvm.h
naga-ffi/: Cargo.toml
naga-ffi/src/: lib.rs
patches/: atlbase_compat.h
scripts/: build-clspv-wasm.sh  build-clspv.sh  build-dxc.sh  build-dxc.sh.bak20  build-dxc.sh.bak21  build-dxc.sh.bak22  build-glslang.sh  build-libfido2.sh  build-llvm-mlvm.sh  build-llvm.sh  build-mlvm.sh  build-naga-wasm.sh  build-naga.sh  build-spirv-cross.sh  build-spirv-cross.sh.bak10  build-spirv-cross.sh.bak11  build-spirv-cross.sh.bak20  build-spirv-cross.sh.bak21  build-spirv-cross.sh.bak22  build-spirv-cross.sh.bak8  build-spirv-cross.sh.bak9  build-spirv-llvm-translator.sh  clspv-exports.ld  clspv-exports.txt  common.sh  download-dxc-windows.sh  spirv-llvm-translator-exports.ld  spirv-llvm-translator-exports.txt
