[package]
name = "naga-ffi"
version = "0.1.0"
edition = "2021"
description = "Thin C FFI wrapper around Naga for linking into non-Rust projects"

[lib]
# Build both forms in one cargo invocation:
#   - staticlib → libnaga_ffi.a   — linked into libmental.a/.dylib statically
#                                   on every platform (native + WASM)
#   - cdylib    → libnaga_ffi.{dylib,so,dll} — kept for consumers who prefer
#                                   to dlopen at runtime
crate-type = ["staticlib", "cdylib"]

[dependencies]
naga = { git = "https://github.com/gfx-rs/wgpu.git", features = [
    "wgsl-in",
    "wgsl-out",
    "spv-in",
    "spv-out",
    "glsl-in",
    "glsl-out",
] }

[profile.release]
lto = true
opt-level = "s"
